# authkit

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  RELEASE.md  RELEASE_ANNOUNCEMENT.md  RELEASE_V0.1.0_SUMMARY.md  TESTING.md
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
docs/: EMAIL_INTEGRATION.md
examples/: email_verification.rs
examples/email_verification/: email_sender.rs  email_verification.rs  email_verification_with_sender.rs
examples/rocket-auth/: .env.example  .gitignore  Cargo.toml  README.md  Rocket.toml
examples/rocket-auth/src/: email.rs  handlers.rs  main.rs  models.rs
src/: auth.rs  builder.rs  email.rs  error.rs  lib.rs  prelude.rs  types.rs
src/database/: mod.rs  models.rs  postgres.rs  sqlite.rs
src/email_job/: config.rs  error.rs  mod.rs  queue.rs  types.rs  worker.rs
src/operations/: email_verification.rs  login.rs  logout.rs  mod.rs  register.rs  verify.rs
src/security/: mod.rs  timing.rs  tokens.rs
src/strategies/: mod.rs
src/strategies/password/: argon2_strategy.rs  mod.rs
src/strategies/session/: database_strategy.rs  mod.rs
src/strategies/token/: database_strategy.rs  mod.rs
src/tests/: README.md  email_verification_tests.rs  error_tests.rs  integration_tests.rs  mod.rs  test_helpers.rs  validation_tests.rs
src/validation/: email.rs  password.rs
