[package]
name = "authkit"
version = "0.1.0"
edition = "2024"

[lib]
name = "authkit"
path = "src/lib.rs"

[features]
default = ["sqlite","argon2"]

sqlite = ["sqlx/sqlite", "sqlx/runtime-tokio"]
postgres = ["sqlx/postgres", "sqlx/runtime-tokio"]

argon2 = ["dep:argon2"]
bcrypt = ["dep:bcrypt"]
jwt = ["dep:jsonwebtoken"]

[dependencies]
tokio = { version = "1.28", features = ["full"] }
async-trait = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio"], default-features = false }
argon2 = {version = "0.5", optional = true }
bcrypt = {version = "0.15", optional = true }
jsonwebtoken = {version = "9", optional = true }
rand = "0.9"
subtle = "2.5"
serde = {version = "1.0", features = ["derive"] }
thiserror = "1.0"
regex = "1.10"
hex = "0.4"
