[package]
name = "authkit"
version = "0.1.0"
edition = "2024"

liscense = "MIT"
authors = ["Akshay B <akshay2642005@gmail.com>"]
description = "A Rust authentication library supporting multiple hashing algorithms and databases."

[lib]
name = "authkit"
path = "src/lib.rs"

[features]
default = ["sqlite","argon2"]

sqlite = ["sqlx/sqlite", "sqlx/runtime-tokio"]
postgres = ["sqlx/postgres", "sqlx/runtime-tokio"]

argon2 = ["dep:argon2", "dep:password-hash"]
bcrypt = ["dep:bcrypt"]
jwt = ["dep:jsonwebtoken"]

[dependencies]
tokio = { version = "1.28", features = ["full"] }
async-trait = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio"], default-features = false }
argon2 = {version = "0.5", optional = true }
password-hash = { version = "0.5", optional = true, features = ["getrandom"] }
bcrypt = {version = "0.17.1", optional = true }
jsonwebtoken = {version = "9", optional = true, features = ["use_pem"] }
rand = "0.9.2"
subtle = "2.5"
serde = {version = "1.0", features = ["derive"] }
thiserror = "2.0.17"
regex = "1.10"
hex = "0.4"
