[package]
name = "rocket-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
authkit = { path = "../..", features = ["sqlite", "argon2"] }
rocket = { version = "0.5", features = ["json"] }
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lettre = { version = "0.11", features = ["tokio1-native-tls", "smtp-transport", "builder"] }
async-trait = "0.1"
chrono = "0.4"
dotenv = "0.15"

[[bin]]
name = "rocket-auth"
path = "src/main.rs"
